--- a/Contact.html
+++ b/Contact.html
@@ -83,11 +83,15 @@
         </div>
     </section>
 
-
     <section class="contact-page-area section-gap">
         <div class="container">
             <div class="row">
-                <div class="map-wrap" style="width:100%; height: 445px;" id="map"></div>
+                <div style="width:100%; height: 445px; overflow: hidden; margin-bottom: 100px;" id="map">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d222.4529744844879!2d89.38389025513652!3d26.86387369247599!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39e3cb3f2fe36d21%3A0xb674cad667a1c454!2sHotel%20Phuentsholing!5e0!3m2!1sen!2sbt!4v1719215162894!5m2!1sen!2sbt" width="100%" height="445" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
+                <!-- <div class="map-wrap" style="width:100%; height: 445px;">
+                    
+                </div> -->
                 <div class="col-lg-4 d-flex flex-column address-wrap">
                     <div class="single-contact-address d-flex flex-row">
                         <div class="icon">
@@ -214,8 +218,8 @@
         integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
         crossorigin="anonymous"></script>
     <script src="js/vendor/bootstrap.min.js"></script>
-    <script type="text/javascript"
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBhOdIF3Y9382fqJYt5I_sswSrEw5eihAA"></script>
+    <!-- <script type="text/javascript" -->
+        <!-- src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBhOdIF3Y9382fqJYt5I_sswSrEw5eihAA"></script> -->
     <script src="js/easing.min.js"></script>
     <script src="js/hoverIntent.js"></script>
     <script src="js/superfish.min.js"></script>
