commiting my change for merge

--- a/Contact.html
+++ b/Contact.html
@@ -27,7 +27,7 @@
     <link rel="stylesheet" href="css/animate.min.css">
     <link rel="stylesheet" href="css/owl.carousel.css">
     <link rel="stylesheet" href="css/main.css">
-</head>
+    </head>
 
 <body>
     <header id="header" id="home">
@@ -58,9 +58,16 @@
                     <ul class="nav-menu">
                         <li class="menu-active"><a href="index.html">Home</a></li>
                         <li><a href="about.html">About</a></li>
-                        <li><a href="services.html">Service</a></li>
+                        <li href="menu-has-children"><a href="#">Service</a>
+                            <ul>
+                                <li><a href="Electrical.html">Electrical</a></li>
+                                <li><a href="Automation.html">Automation</a></li>
+                                <li><a href="TR.html">Troubleshooting & Repairs</a></li>
+                                <li><a href="PLC.html">PLC</a></li>
+                                </ul>
+                            </li>
+                        <li><a href="products.html">Products</a></li>
                         <li><a href="projects.html">Projects</a></li>
-
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </nav>
