--- a/about.html
+++ b/about.html
@@ -26,6 +26,8 @@
 <link rel="stylesheet" href="css/animate.min.css">
 <link rel="stylesheet" href="css/owl.carousel.css">
 <link rel="stylesheet" href="css/main.css">
+
+
 </head>
 <body>
 <header id="header" id="home">
@@ -56,14 +58,15 @@
 <ul class="nav-menu">
 <li class="menu-active"><a href="index.html">Home</a></li>
 <li><a href="about.html">About</a></li>
-<li><a href="services.html">Service</a></li>
-<ul>
-    <li><a href="Electrical.html">Electrical</a></li>
-    <li><a href="Automation.html">Automation</a></li>
-    <li><a href="TR.html">Troubleshooting & Repairs</a></li>
-    <li><a href="PLC.html">PLC</a></li>
-    
-    </ul>
+<li href="menu-has-children"><a href="#">Service</a>
+	<ul>
+		<li><a href="Electrical.html">Electrical</a></li>
+		<li><a href="Automation.html">Automation</a></li>
+		<li><a href="TR.html">Troubleshooting & Repairs</a></li>
+		<li><a href="PLC.html">PLC</a></li>
+		</ul>
+	</li>
+<li><a href="products.html">Products</a></li>
 <li><a href="projects.html">Projects</a></li>
 <li><a href="contact.html">Contact</a></li>
 </ul>
@@ -343,27 +346,11 @@ Copyright &copy;<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/clou
 </p>
 </div>
 </div>
-<div class="col-lg-5  col-md-6 col-sm-6">
-<div class="single-footer-widget">
-<h6>Newsletter</h6>
-<p>Stay update with our latest</p>
-<div class id="mc_embed_signup">
-<form target="_blank" novalidate="true" action="https://spondonit.us12.list-manage.com/subscribe/post?u=1462626880ade1ac87bd9c93a&amp;id=92a4423d01" method="get" class="form-inline">
-<input class="form-control" name="EMAIL" placeholder="Enter Email" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter Email '" required type="email">
-<button class="click-btn btn btn-default"><i class="fa fa-long-arrow-right" aria-hidden="true"></i></button>
-<div style="position: absolute; left: -5000px;">
-<input name="b_36c4fd991d266f23781ded980_aefe40901a" tabindex="-1" value type="text">
-</div>
-<div class="info"></div>
-</form>
-</div>
-</div>
-</div>
-<div class="col-lg-2 col-md-6 col-sm-6 social-widget">
-<div class="single-footer-widget">
+<div class="col-lg-7 col-md-6 col-sm-6 d-flex justify-content-end">
+	<div class="single-footer-widget">
 <h6>Follow Us</h6>
 <p>Let us be social</p>
-<div class="footer-social d-flex align-items-center">
+<div class="footer-social">	
 <a href="#"><i class="fa fa-facebook"></i></a>
 <a href="#"><i class="fa fa-twitter"></i></a>
 <a href="#"><i class="fa fa-dribbble"></i></a>
