--- a/services.html
+++ b/services.html
@@ -26,6 +26,19 @@
 <link rel="stylesheet" href="css/animate.min.css">
 <link rel="stylesheet" href="css/owl.carousel.css">
 <link rel="stylesheet" href="css/main.css">
+<style>
+    .footer-area .footer-wrapper {
+      display: flex;
+      justify-content: space-between;
+      align-items: flex-start;
+    }
+    .footer-area .footer-content {
+      flex: 1;
+    }
+    .footer-area .social-widget {
+      margin-left: auto;
+    }
+  </style>
 </head>
 <body>
 <header id="header" id="home">
@@ -56,7 +69,15 @@
 <ul class="nav-menu">
 <li class="menu-active"><a href="index.html">Home</a></li>
 <li><a href="about.html">About</a></li>
-<li class="menu-has-children"><a href>Service</a></li>
+<li href="menu-has-children"><a href="#">Service</a>
+    <ul>
+        <li><a href="Electrical.html">Electrical</a></li>
+        <li><a href="Automation.html">Automation</a></li>
+        <li><a href="TR.html">Troubleshooting & Repairs</a></li>
+        <li><a href="PLC.html">PLC</a></li>
+        </ul>
+    </li>
+<li><a href="products.html">Products</a></li>
 <li><a href="projects.html">Projects</a></li>
 
 <li><a href="contact.html">Contact</a></li>
