--- a/products.html
+++ b/products.html
@@ -50,7 +50,7 @@
 <div class="container main-menu">
 <div class="row align-items-center justify-content-between d-flex">
 <div id="logo">
-<a href="index.html"><img src="img/final.png" alt title /></a>
+<a href="index.html"><img src="img/lg (1).jpg" alt title /></a>
 </div>
 <nav id="nav-menu-container">
 <ul class="nav-menu">
@@ -85,9 +85,9 @@
 <div class="row d-flex align-items-center justify-content-center">
 <div class="about-content col-lg-12">
 <h1 class="text-white">
-Projects
+Products
 </h1>
-<p class="text-white link-nav"><a href="index.html">Home </a> <span class="lnr lnr-arrow-right"></span> <a href="projects.html"> Projects</a></p>
+<p class="text-white link-nav"><a href="index.html">Home </a> <span class="lnr lnr-arrow-right"></span> <a href="projects.html"> Products</a></p>
 </div>
 </div>
 </div>
@@ -100,29 +100,29 @@ Projects
 <div class="col-md-8 pb-30 header-text text-center">
 <h1 class="mb-10">Latest Finished Projects</h1>
 <p>
-    At Triyansh Tech, our projects showcase our commitment to quality and innovation. From <strong>smart homes</strong> to <strong>industrial automation</strong> and <strong>student college projects</strong>, we deliver exceptional results every time. Trust us to bring your vision to life with precision and expertise.
+Who are in extremely love with eco friendly system..
 </p>
 </div>
 </div>
 <div class="row">
+<div class="col-lg-8 col-md-8">
+<a href="img/p1.jpg" class="img-gal">
+<img class="img-fluid single-project" src="img/p1.jpg.webp" alt>
+</a>
+</div>
+<div class="col-lg-4 col-md-4">
+<a href="img/p2.jpg" class="img-gal">
+<img class="img-fluid single-project" src="img/p2.jpg.webp" alt>
+</a>
+</div>
 <div class="col-lg-6 col-md-6">
-<a href="img/E1.jpeg" class="img-gal">
-<img class="img-fluid single-project" src="img/E1.jpeg" alt>
-</a>
-</div>
-<div class="col-lg-5 col-md-6">
-<a href="img/ss.jpg" class="img-gal">
-<img class="img-fluid single-project" src="img/ss.jpg" alt>
+<a href="img/p3.jpg" class="img-gal">
+<img class="img-fluid single-project" src="img/p3.jpg.webp" alt>
 </a>
 </div>
 <div class="col-lg-6 col-md-6">
-<a href="img/E2.jpeg" class="img-gal">
-<img class="img-fluid single-project" src="img/E2.jpeg" alt>
-</a>
-</div>
-<div class="col-lg-5 col-md-5">
-<a href="img/installation.jpg" class="img-gal">
-<img class="img-fluid single-project" src="img/installation.jpg" alt>
+<a href="img/p4.jpg" class="img-gal">
+<img class="img-fluid single-project" src="img/p4.jpg.webp" alt>
 </a>
 </div>
 </div>
@@ -130,35 +130,40 @@ Projects
 </section>
 
 
-<section class="cat-area section-gap" id="feature">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-4">
-                <div class="single-cat d-flex flex-column">
-                    <a href="#" class="hb-sm-margin mx-auto d-block"><span class="hb hb-sm inv hb-facebook-inv"><span class="lnr lnr-magic-wand"></span></span></a>
-                    <h4 class="mb-20" style="margin-top: 23px;">Customer-Centric Approach</h4>
-                    <p>
-                        We prioritize understanding and meeting our customers' unique needs, tailoring our services to ensure high satisfaction. This focus on customization and quality drives our success in new markets.  </div>
-            </div>
-            <div class="col-lg-4">
-                <div class="single-cat">
-                    <a href="#" class="hb-sm-margin mx-auto d-block"><span class="hb hb-sm inv hb-facebook-inv"><span class="lnr lnr-rocket"></span></span></a>
-                    <h4 class="mt-40 mb-20">Innovative Solutions</h4>
-                    <p>
-                        By staying at the forefront of technology, we provide cutting-edge electrical, automation, and CCTV systems. Our innovative approach ensures unmatched reliability and efficiency, setting us apart from competitors.                        </p>
-                </div>
-            </div>
-            <div class="col-lg-4">
-                <div class="single-cat">
-                    <a href="#" class="hb-sm-margin mx-auto d-block"><span class="hb hb-sm inv hb-facebook-inv"><span class="lnr lnr-bug"></span></span></a>
-                    <h4 class="mt-40 mb-20">Quality and Reliability</h4>
-                    <p>
-                        Our reputation for high-quality workmanship and dependable service helps build trust with new customers. Triyansh Tech consistently delivers exceptional results, fostering strong market presence and growth.                        </p>
-                </div>
-            </div>
-        </div>
-    </div>
+<section class="cat-area section-gap aboutus-cat" id="feature">
+<div class="container">
+<div class="row">
+<div class="col-lg-4">
+<div class="single-cat d-flex flex-column">
+<a href="#" class="hb-sm-margin mx-auto d-block"><span class="hb hb-sm inv hb-facebook-inv"><span class="lnr lnr-magic-wand"></span></span></a>
+<h4 class="mb-20" style="margin-top: 23px;">Maintenance</h4>
+<p>
+inappropriate behavior is often laughed off as “boys will be boys,” women face higher conduct standards especially in the workplace. That’s why.
+</p>
+</div>
+</div>
+<div class="col-lg-4">
+<div class="single-cat">
+<a href="#" class="hb-sm-margin mx-auto d-block"><span class="hb hb-sm inv hb-facebook-inv"><span class="lnr lnr-rocket"></span></span></a>
+<h4 class="mt-40 mb-20">Residental Service</h4>
+<p>
+inappropriate behavior is often laughed off as “boys will be boys,” women face higher conduct standards especially in the workplace. That’s why.
+</p>
+</div>
+</div>
+<div class="col-lg-4">
+<div class="single-cat">
+<a href="#" class="hb-sm-margin mx-auto d-block"><span class="hb hb-sm inv hb-facebook-inv"><span class="lnr lnr-bug"></span></span></a>
+<h4 class="mt-40 mb-20">Commercial Service</h4>
+<p>
+inappropriate behavior is often laughed off as “boys will be boys,” women face higher conduct standards especially in the workplace. That’s why.
+</p>
+</div>
+</div>
+</div>
+</div>
 </section>
+
 
 <section class="feedback-area aboutus-feedback section-gap" id="feedback">
 <div class="container">
@@ -236,7 +241,7 @@ Accessories Here you can find the best computer accessory for your laptop, monit
               <div class="single-footer-widget">
                 <h6>&copy;<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>Triyansh Tech</h6>
                 <p>
-                    Flat No: 03-6, Hotel Phuntsholing Building<br>
+                Hotel Phuntsholing Building, 1st Floor<br>
                 21101-P/Ling, Chhukha<br>
                 Bhutan
                 </p>
