--- a/TR.html
+++ b/TR.html
@@ -1,4 +1,4 @@
-	<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="zxx" class="no-js">
 <head>
 
@@ -16,7 +16,6 @@
 
 <title>Industry</title>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-
 <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,400,300,500,600,700" rel="stylesheet">
 
 <link rel="stylesheet" href="css/linearicons.css">
@@ -38,9 +37,8 @@
 <div class="row">
 <div class="col-lg-6 col-sm-6 col-4 header-top-left no-padding">
 <ul>
-<li><a href="https://www.facebook.com/profile.php?id=61550124781066&mibextid=ZbWKwL"><i class="fa fa-facebook"></i></a></li>
-<li><a href="https://www.instagram.com/triyansh_enterprise?igsh=Y2QxenFyZnBpNWdw"><i class="fa fa-instagram"></i></a></li>
-
+	<li><a href="https://www.facebook.com/profile.php?id=61550124781066&mibextid=ZbWKwL"><i class="fa fa-facebook"></i></a></li>
+	<li><a href="https://www.instagram.com/triyansh_enterprise?igsh=Y2QxenFyZnBpNWdw"><i class="fa fa-instagram"></i></a></li>
 </ul>
 </div>
 <div class="col-lg-6 col-sm-6 col-8 header-top-right no-padding">
@@ -53,7 +51,7 @@
 <div class="container main-menu">
 <div class="row align-items-center justify-content-between d-flex">
 <div id="logo">
-<a href="index.html"><img src="img/logo.png.webp" alt title /></a>
+<a href="index.html"><img src="img/final.png" alt title /></a>
 </div>
 <nav id="nav-menu-container">
 <ul class="nav-menu">
@@ -88,9 +86,9 @@
 <div class="row d-flex align-items-center justify-content-center">
 <div class="about-content col-lg-12">
 <h1 class="text-white">
-About Us
-</h1>
-<p class="text-white link-nav"><a href="index.html">Home </a> <span class="lnr lnr-arrow-right"></span> <a href="about.html"> About Us</a></p>
+CCTV Installation & Services</h1>
+
+<p class="text-white">Keep your space safe and secure with Triyansh Tech’s expert CCTV installation and services. We’re here to help you protect what matters most with the latest in surveillance technology and personalized service.</p>
 </div>
 </div>
 </div>
@@ -98,169 +96,76 @@ About Us
 
 
 <section class="home-about-area section-gap aboutus-about" id="about">
-<div class="container">
 <div class="row justify-content-center align-items-center">
 <div class="col-lg-8 col-md-12 home-about-left">
 
-<h3>
-	Welcome to Triyansh Enterprise, where we bring innovation and excellence to your electrical and automation needs. Here's a glimpse of what we offer:
-</h3>
+<h4>
+	At Triyansh Tech, we understand the importance of security for your home and business. Our CCTV installation and services are designed to give you peace of mind, knowing that your property is protected by the latest in surveillance technology.</h4>
 <br>
-<h6 class="main"><strong>Electrical Services</strong></h6>
-<p >
-	<li>Installation and Maintenance: Our expert team handles everything from residential and commercial electrical systems to industrial setups. We specialize in installing CCTV systems, ensuring your security is top-notch. We also take care of lighting, power outlets, and more, making sure everything runs smoothly.</li>
-	<li>Wiring and Rewiring: Safe, efficient, and reliable wiring solutions are our specialty, including rewiring existing systems to meet modern standards.</li>
-	<li>Troubleshooting and Repairs: Fast and accurate diagnosis and repair of electrical issues to keep your operations running without a hitch.</li>
-</p>
+<h6 class="main"><strong>Why Our CCTV Services Stand Out
+</strong></h6>
+<img src="img/cctv.jpeg" alt="Electrical Services" style="max-width: 250px; border-radius: 15px; float: right; margin-right: 20px;">
 
-<h6 class="main"><strong>Automation Services</strong></h6>
 <p >
-	<li>Industrial Automation: Enhance your manufacturing processes with our custom automation solutions, designed to boost productivity and efficiency.</li>
-	<li>Building Automation: We integrate smart systems for lighting, HVAC, security, and more, providing seamless control and significant energy savings.</li>
-	<li>PLC Programming and SCADA Systems: Our expertise in PLCs and SCADA systems ensures streamlined operations and real-time monitoring of critical processes.</li>
+	<li><strong>Tailored Security Solutions:</strong> Every property is unique, and so are our security solutions. We customize your CCTV system to ensure complete coverage and protection, whether it's a cozy home or a sprawling business complex. Each camera is meticulously placed to give you the best possible view.</li>
+	<li><strong>Top-of-the-Line Technology:</strong> Experience crystal-clear video quality, night vision capabilities, and remote monitoring with our advanced CCTV systems. Access live footage and recorded videos from anywhere in the world using your smartphone or computer. Stay connected to your property at all times.</li>
+	<li><strong>Professional Installation:</strong> Our friendly team will handle the installation quickly and efficiently, ensuring everything works perfectly with minimal hassle.</li>
+<li><strong>Reliable Support:</strong> We don’t just install and forget. Our team provides ongoing support and maintenance to keep your CCTV system in top shape. Should you encounter any issues or have questions, we’re always here to help.</li>
 </p>
 <br>
+<br>
+
+<h6 class="main" style="text-align: center; margin: 0 20px;"><strong>The Benefits You’ll Enjoy
+</strong></h6>
+<img src="img/cctv1.jpeg" alt="Electrical Services" style="max-width: 500px; border-radius: 15px; float: left; margin-right: 20px;">
+
+<p >
+	<li><strong>Effective Deterrent:</strong> Visible CCTV cameras are a powerful deterrent against potential criminals, reducing the likelihood of theft and vandalism.</li>
+	<li><strong>Crucial Evidence:</strong> In the event of a security incident, high-quality footage can be crucial for identifying suspects and providing evidence to authorities.</li>
+	<li><strong>Ultimate Peace of Mind:</strong> Knowing that your property is under constant surveillance lets you relax and focus on what’s important, without worrying about security.</li>
+</p>
+<br>
+<br><br><br>
 <h3> Why Choose Us?? </h3>
 <p>
 	<li>Expertise and Experience: Our team of certified professionals brings years of experience and a deep understanding of electrical and automation systems.</li>
     <li>Customized Solutions: We recognize that each client has unique needs and tailor our services accordingly to provide the best solutions.</li>
 	<li>Quality and Safety: We are committed to delivering high-quality workmanship while adhering to the highest safety standards.</li>
 </p>
-<br>
-<br>
-<h4>Ready to get started? Contact us today and let Triyansh Tech illuminate your path to success.</h4>
+
 
 </section>
 
 
-<section class="cat-area section-gap aboutus-cat" id="feature">
-<div class="container">
-<div class="row">
-<div class="col-lg-4">
-<div class="single-cat d-flex flex-column">
-<a href="#" class="hb-sm-margin mx-auto d-block"><span class="hb hb-sm inv hb-facebook-inv"><span class="lnr lnr-magic-wand"></span></span></a>
-<h4 class="mb-20" style="margin-top: 23px;">Customer-Centric Approach</h4>
-<p>
-	We prioritize understanding and meeting our customers' unique needs, tailoring our services to ensure high satisfaction. This focus on customization and quality drives our success in new markets.                    </div>
-</div>
-<div class="col-lg-4">
-<div class="single-cat">
-<a href="#" class="hb-sm-margin mx-auto d-block"><span class="hb hb-sm inv hb-facebook-inv"><span class="lnr lnr-rocket"></span></span></a>
-<h4 class="mt-40 mb-20">Innovative Solutions</h4>
-<p>
-	By staying at the forefront of technology, we provide cutting-edge electrical, automation, and CCTV systems. Our innovative approach ensures unmatched reliability and efficiency, setting us apart from competitors.                        </p>
-</div>
-</div>
-<div class="col-lg-4">
-<div class="single-cat">
-<a href="#" class="hb-sm-margin mx-auto d-block"><span class="hb hb-sm inv hb-facebook-inv"><span class="lnr lnr-bug"></span></span></a>
-<h4 class="mt-40 mb-20">Quality and Reliability</h4>
-<p>
-	Our reputation for high-quality workmanship and dependable service helps build trust with new customers. Triyansh Tech consistently delivers exceptional results, fostering strong market presence and growth.                        </p>
-</div>
-</div>
-</div>
-</div>
+<section class="cat-area section-gap" id="feature">
+	<div class="container">
+		<div class="row">
+			<div class="col-lg-4">
+				<div class="single-cat d-flex flex-column">
+					<a href="#" class="hb-sm-margin mx-auto d-block"><span class="hb hb-sm inv hb-facebook-inv"><span class="lnr lnr-magic-wand"></span></span></a>
+					<h4 class="mb-20" style="margin-top: 23px;">Customer-Centric Approach</h4>
+					<p>
+						We prioritize understanding and meeting our customers' unique needs, tailoring our services to ensure high satisfaction. This focus on customization and quality drives our success in new markets.  </div>
+			</div>
+			<div class="col-lg-4">
+				<div class="single-cat">
+					<a href="#" class="hb-sm-margin mx-auto d-block"><span class="hb hb-sm inv hb-facebook-inv"><span class="lnr lnr-rocket"></span></span></a>
+					<h4 class="mt-40 mb-20">Innovative Solutions</h4>
+					<p>
+						By staying at the forefront of technology, we provide cutting-edge electrical, automation, and CCTV systems. Our innovative approach ensures unmatched reliability and efficiency, setting us apart from competitors.                        </p>
+				</div>
+			</div>
+			<div class="col-lg-4">
+				<div class="single-cat">
+					<a href="#" class="hb-sm-margin mx-auto d-block"><span class="hb hb-sm inv hb-facebook-inv"><span class="lnr lnr-bug"></span></span></a>
+					<h4 class="mt-40 mb-20">Quality and Reliability</h4>
+					<p>
+						Our reputation for high-quality workmanship and dependable service helps build trust with new customers. Triyansh Tech consistently delivers exceptional results, fostering strong market presence and growth.                        </p>
+				</div>
+			</div>
+		</div>
+	</div>
 </section>
-
-
-<section class="service-area section-gap" id="service">
-<div class="container">
-<div class="row justify-content-center">
-<div class="col-md-12 pb-30 header-text text-center">
-<h1 class="mb-10">Our Capturing Market Sectors</h1>
-<p>
-Who are in extremely love with eco friendly system..
-</p>
-</div>
-</div>
-<div class="row">
-<div class="col-lg-4">
-<div class="single-service">
-<div class="thumb">
-<img src="img/residential.png" alt>
-</div>
-<h4>Residentials</h4>
-<p>
-    We provide top-notch electrical installations, automation systems, and security solutions to homeowners, enhancing comfort, convenience, and safety.</p>
-</div>
-</div>
-<div class="col-lg-4 ">
-<div class="single-service ">
-<div class="thumb ">
-<img src="img/commercial.webp " alt>
-</div>
-<h4>Commercials</h4>
-<p>
-    Businesses rely on us for efficient electrical systems, sophisticated automation, and robust security measures. Our services help improve operations and protect valuable assets.</p>
-</div>
-</div>
-<div class="col-lg-4 ">
-<div class="single-service ">
-<div class="thumb ">
-<img src="img/industry.jpg " alt>
-</div>
-<h4>Industrials</h4>
-<p>
-    Our expertise in industrial automation and electrical systems ensures that manufacturing and production facilities run smoothly and efficiently. We provide solutions that boost productivity and reduce downtime.</p>
-</div>
-</div>
-</div>
-</div>
-</section>
-
-<section class="faq-area section-gap relative">
-<div class="overlay overlay-bg"></div>
-<div class="container">
-<div class="row justify-content-center align-items-center">
-<div class="col-lg-3 col-md-6">
-<div class="single-faq">
-<div class="circle">
-<div class="inner"></div>
-</div>
-<h5><span class="counter">2</span>K+</h5>
-<p>
-Projects Completed
-</p>
-</div>
-</div>
-<div class="col-lg-3 col-md-6">
-<div class="single-faq">
-<div class="circle">
-<div class="inner"></div>
-</div>
-<h5><span class="counter">5.5</span>K</h5>
-<p>
-Total Employees
-</p>
-</div>
-</div>
-<div class="col-lg-3 col-md-6">
-<div class="single-faq">
-<div class="circle">
-<div class="inner"></div>
-</div>
-<h5 class="counter">959</h5>
-<p>
-Happy Clients
-</p>
-</div>
-</div>
-<div class="col-lg-3 col-md-6">
-<div class="single-faq">
-<div class="circle">
-<div class="inner"></div>
-</div>
-<h5 class="counter">367</h5>
-<p>
-Tickets Submited
-</p>
-</div>
-</div>
-</div>
-</div>
-</section>
-
 
 <section class="feedback-area aboutus-feedback section-gap" id="feedback">
 <div class="container">
@@ -354,10 +259,8 @@ Bhutan
 <h6>Follow Us</h6>
 <p>Let us be social</p>
 <div class="footer-social">	
-<a href="https://www.facebook.com/profile.php?id=61550124781066&mibextid=ZbWKwL"><i class="fa fa-facebook"></i></a>
-<a href="https://www.instagram.com/triyansh_enterprise?igsh=Y2QxenFyZnBpNWdw"><i class="fa fa-instagram"></i></a>
-
-</div>
+	<a href="https://www.facebook.com/profile.php?id=61550124781066&mibextid=ZbWKwL"><i class="fa fa-facebook"></i></a>
+	<a href="https://www.instagram.com/triyansh_enterprise?igsh=Y2QxenFyZnBpNWdw"><i class="fa fa-instagram"></i></a>
 </div>
 </div>
 </div>
